fix the cards boders and also align them correctly

--- a/style.css
+++ b/style.css
@@ -140,18 +140,41 @@ button{
 .content-2{
   display: flex;
   flex-direction: column;
+  padding: 40px 0px;
 }
 .heading{
   text-align: center;
   font-size: 36px;
   color: #1f2937;
   font-weight: 900;
+  margin-bottom: 40px;
 }
 
 .cards {
   display: flex;
+  justify-content: center;
+  gap: 40px;
 }
 
 .card{
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 180px;
+}
+
+.space{
+  width: 180px;
+  height: 180px;
+  border-radius: 15px;
+  border: 4px;
+  border-style: solid;
+  border-color: #3882f6;
+  margin-bottom: 5px;
+}
+
+.img-subtext{
+  text-align: center;
+  font-size: 18px;
+  color: #6a6a6b;
 }
